--- a/views/register.ejs
+++ b/views/register.ejs
@@ -19,7 +19,14 @@
                         Sign up
                         <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m6 17 5-5-5-5"></path><path d="m13 17 5-5-5-5"></path></svg>
         </button>
-        <p id="register"><a href="#">Go back to log in</a></p>
+        <p id="register"><a href="#" id="log in">Go back to log in</a></p>
     </form>
 </body>
+<script>
+  const logInButton = document.getElementById('log in');
+
+    logInButton.addEventListener('click', () => {
+        window.location.href = '/';
+    });
+</script>
 </html>
