--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/public/stylesheets/style.css">
 </head>
 <body>
-    <form action="" class="form">
+    <form action="/register" method="POST" class="form">
         <p>
             Welcome,<span>register to continue</span>
         </p>
@@ -15,7 +15,7 @@
         <input type="email" placeholder="Email" name="email">
         <input type="password" placeholder="Password" name="password">
         <input type="password" placeholder="Confirm password" name="confirmPassword">
-        <button class="oauthButton">
+        <button type="submit" name="registerButton" class="oauthButton">
                         Sign up
                         <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m6 17 5-5-5-5"></path><path d="m13 17 5-5-5-5"></path></svg>
         </button>
