--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,14 @@
                       Continue
                       <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m6 17 5-5-5-5"></path><path d="m13 17 5-5-5-5"></path></svg>
       </button>
-      <p id="register">Don't have an account?<a href="#" id = register >Register</a></p>
+      <p>Don't have an account?<a href="#" id =register >Register</a></p>
+
+      <% if (error_msg) { %>
+        <div class="error"><%= error_msg %></div>
+      <% } %>
+      <% if (error) { %>
+        <div class="error"><%= error %></div>
+      <% } %>
 
   </form>
 </body>
