--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,10 +11,10 @@
         <p>
             Welcome,<span>register to continue</span>
         </p>
-        <input type="text" placeholder="Username" name="username">
-        <input type="email" placeholder="Email" name="email">
-        <input type="password" placeholder="Password" name="password">
-        <input type="password" placeholder="Confirm password" name="confirmPassword">
+        <input type="text" placeholder="Username" name="username" required>
+        <input type="email" placeholder="Email" name="email" required>
+        <input type="password" placeholder="Password" name="password" required>
+        <input type="password" placeholder="Confirm password" name="confirmPassword" required>
         <button type="submit" name="registerButton" class="oauthButton">
                         Sign up
                         <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m6 17 5-5-5-5"></path><path d="m13 17 5-5-5-5"></path></svg>
