--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,6 +57,7 @@
   });
 
   githubButton.addEventListener('click', () => {
+    event.preventDefault();
     window.location.href = '/auth/github';
   });
 </script>
