--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,29 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Register</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
-    <form action="/register" method="POST" class="form">
-        <p>
-            Welcome,<span>register to continue</span>
-        </p>
-        <input type="text" placeholder="Username" name="username" required>
-        <input type="email" placeholder="Email" name="email" required>
-        <input type="password" placeholder="Password" name="password" required>
-        <input type="password" placeholder="Confirm password" name="confirmPassword" required>
-        <button type="submit" name="registerButton" class="oauthButton">
-                        Sign up
-                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m6 17 5-5-5-5"></path><path d="m13 17 5-5-5-5"></path></svg>
-        </button>
-        <p id="register"><a href="#" id="log in">Go back to log in</a></p>
-    </form>
+  <h1>Register</h1>
+  <form action="/register" method="POST">
+    <input type="text" name="username" placeholder="Username" required />
+    <input type="password" name="password" placeholder="Password" required />
+    <input type="email" name="email" placeholder="Email" required />
+    <button type="submit">Register</button>
+  </form>
+  <p><a href="/">Back to Login</a></p>
 </body>
-<script>
-  const logInButton = document.getElementById('log in');
-
-    logInButton.addEventListener('click', () => {
-        window.location.href = '/';
-    });
-</script>
 </html>
